# quaestor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  app_static.py  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
benchmarks/: phase1-results.json  phase2-results.json  ragas_results.json
docs/: bitacora-interview-narrative.md  case_study.md
docs/architecture/: phase1-baseline.md
eval/: evaluate.py  golden_dataset.json
eval/harness/: README.md  check_limits.py  run_pipeline.sh  run_ragas.sh
eval/results/: BASELINE_SUMMARY.md  COMPARISON.md  phase2_child_baseline.json  phase2_child_baseline_clean.json  phase3_parent_injection.json
examples/phase1-baseline/: .env.example  README.md  pyproject.toml
examples/phase1-baseline/src/quaestor/generation/: prompts.py
examples/phase1-baseline/src_quaestor/ingestion/: chunker.py  indexer.py  loader.py
examples/phase1-baseline/src_quaestor/retrieval/: retriever.py
examples/phase1-baseline/tests/unit/: test_chain.py  test_config.py  test_indexer.py  test_prompts.py
genesis/: HERODOTO.md
notebooks/: 01_chunking_failure_analysis.ipynb
scripts/: evaluate.py  generate_figures.py  index_documents.py  smoke_test.py  smoke_test_phase2.py
src/quaestor/: config.py
src/quaestor/api/: main.py  schemas.py
src/quaestor/generation/: chain.py
src/quaestor/guardrails/: input.py  output.py
src/quaestor/ingestion/: chunker.py  indexer.py
src/quaestor/retrieval/: graph.py  reranker.py
tests/integration/: test_endpoint_consistency.py
tests/unit/: test_api.py  test_chunker.py  test_config.py  test_evaluate.py  test_graph.py  test_input_guardrail.py  test_loader.py  test_output_guardrail.py  test_qdrant_indexer.py  test_reranker.py  test_retriever.py
